Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* fixed potential for eclass preloading to use the incorrect repo source.
  This could only be triggered by actual API usage, not from commandline
  usage.

* ebuild package instances now have an officially supported .inherited attribute
  for finding out the eclasses used by a pkg.  In addition, this attribute
  is now installed into the vdb repository, and binpkgs.

* pkgcore no longer adds REQUIRED_USE to vdb nor binpkg; it's a pointless
  metadata key, plus we used to corrupt it.

* fixed bug where portdir write cache wouldn't be created, nor used.
  Wasn't seen primarily due to regen being fast enough it's not a huge
  issue.

* fixed addition stacking issue w/ eclass defined REQUIRED_USE resulting
  in corrupted IUSE.

* fixed long standing race that could occur during pmaint regen leading
  to an ebuild failing to be regenerated.

* added protection and QA scanning for bad IFS/shopt/set manipulation
  by user code.


pkgcore 0.7.7.1: Dec 2nd, 2011

* Fix eclass metadata var (IUSE for example) stacking in metadata
  phases.

* Fix has invocations in ebuild helpers


pkgcore 0.7.7: Dec 2nd, 2011

* pmaint regen optimizations.  This is now >5x faster than 0.7.6,
  and ~3x faster than 0.7.2 (0.7.3 introduced a regression).

* restore pmaint sync support for unsynced repositories.

* support lookup of a repo by it's name, rather than just by path.
  This affects pquery --repo, pmaint sync, pmaint copy, pinspect, etc.

* --debug now again enables full traceback output for config failures.


* pkgcore 0.7.6.1: Dec 1st, 2011

* fix portage_config generation bug in 0.7.6; in the process, forced
  overlay's eclass stacking onto PORTDIR is no longer done by default.


pkgcore 0.7.6: Nov 30th, 2011

* pplugincache now removes old caches when ran.

* pkgcore now honors layout.conf masters for eclass stacking.
